2018-03-16  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #22963]
	* localedata/locales/cs_CZ (mon): Rename to...
	(alt_mon): This.
	(mon): Import from CLDR (genitive case).

2018-03-16  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #22937]
	* localedata/locales/el_CY (abmon): Rename to...
	(ab_alt_mon): This.
	(abmon): Import from CLDR (abbreviated genitive case).
	* localedata/locales/el_GR (abmon): Rename to...
	(ab_alt_mon): This.
	(abmon): Import from CLDR (abbreviated genitive case).

2018-03-16  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #22932]
	* localedata/locales/lt_LT (abmon): Synchronize with CLDR.

2018-03-16  Robert Buj  <robert.buj@gmail.com>

	[BZ #22848]
	* localedata/locales/ca_ES (abmon): Rename to...
	(ab_alt_mon): This, then synchronize with CLDR (nominative case).
	(mon): Rename to...
	(alt_mon): This.
	(abmon): Import from CLDR (genitive case, month names preceded by
	"de" or "d’").
	(mon): Likewise.
	(abday): Synchronize with CLDR.
	(d_t_fmt): Likewise.
	(d_fmt): Likewise.
	(am_pm): Likewise.

	(LC_TIME): Improve indentation.
	(LC_TELEPHONE): Likewise.
	(LC_NAME): Likewise.
	(LC_ADDRESS): Likewise.

2018-03-12  Dmitry V. Levin  <ldv@altlinux.org>

	* po/pt_BR.po: Update translations.

2018-03-03  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #21269]
	* sysdeps/unix/sysv/linux/i386/Makefile (tests): Add tst-bz21269.
	* sysdeps/unix/sysv/linux/i386/sigaction.c (SET_SA_RESTORER): Clear
	sa_restorer for vDSO case.
	* sysdeps/unix/sysv/linux/i386/tst-bz21269.c: New file.

2018-03-03  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #22918]
	* nss/nsswitch.h (DEFINE_DATABASE): Don't define __nss_*_database.
	* nss/nsswitch.c (DEFINE_DATABASE): Define __nss_*_database here.
	* nscd/gai.c (__nss_hosts_database): Readd definition.
	* posix/tst-rfc3484.c (__nss_hosts_database): Likewise.
	* posix/tst-rfc3484-3.c (__nss_hosts_database): Likewise.
	* posix/tst-rfc3484-2.c (__nss_hosts_database): Likewise.
